[tool.poetry]
name = "cryptography-private-notes"
version = "0.1.0"
description = "A project for managing cryptography notes."
authors = ["Sean Blizard <sean@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,!=3.9.0,!=3.9.1,<4.0"
cryptography = "^46.0.1"
pytest = "^8.4.2"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
flake8 = "^7.3.0"

[tool.flake8]
max-line-length = 120
ignore = ["E501"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"